--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,7 @@ cs.datasource.h2.driver-class-name=org.h2.Driver
 cs.datasource.jpa.hibernate.ddl-auto=update
 cs.datasource.jpa.hibernate.show-sql=true
 cs.datasource.jpa.hibernate.dialect=org.hibernate.dialect.H2Dialect
-cs.mail.port=25
+cs.email.port=25
+cs.email.password=pass
+cs.email.username=user
+cs.email.host=localhost
